cabal-version: 1.12

name:           hw3
version:        0.1.0.0
license:        GPL-3
build-type:     Simple

library
  exposed-modules:
      HW3.Base
      HW3.Evaluator
      HW3.Parser
      HW3.Pretty
      HW3.Action
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , haskeline >=0.8.1.2
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , scientific
    , transformers
    , text
    , parser-combinators
    , containers
    , bytestring
    , zlib
    , serialise
    , directory
    , time
    , random
  default-language: Haskell2010

executable hi
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , haskeline >=0.8.1.2
    , hw3
    , containers
    , megaparsec
  default-language: Haskell2010